tdf#100390 Export subpath endings to PPTX

When the subpaths is not exported some of the shapes (for example which used closed
shapes) is not displayed correctly.

This patch add support for exporting subpath endings.

Change-Id: I345ea77866aa57a6516f896f61ca796891f2ab92